2013-02-13  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/ieee754/dbl-64/mpa.c (add_magnitudes): Use ZK to
	minimize writes to Z.
	(sub_magnitudes): Simplify code a bit.

2013-02-12  Roland McGrath  <roland@hack.frob.com>

	* include/libc-symbols.h (stub_warning): Remove "warning: " prefix
	from the message.  The linker prefixes all warnings with that already.

2013-02-12  Andreas Schwab  <schwab@suse.de>

	[BZ #15078]
	* posix/regexec.c (extend_buffers): Add parameter min_len.
	(check_matching): Pass minimum needed length.
	(clean_state_log_if_needed): Likewise.
	(get_subexp): Likewise.
	* posix/Makefile (tests): Add bug-regex34.
	(bug-regex34-ENV): Define.
	* posix/bug-regex34.c: New file.

	[BZ #11561]
	* posix/regcomp.c (parse_bracket_exp): When looking up collating
	elements compare against the byte sequence of it, not its name.
	* posix/Makefile (tests): Add bug-regex35.
	(bug-regex35-ENV): Define.
	* posix/bug-regex35.c: New file.

2013-02-11  Tom de Vries  <tom@codesourcery.com>

	* string/str-two-way.h:  Fix typo RESULT_TYPE -> RETURN_TYPE in
	comment.
	Add RET0_IF_0 and CHECK_EOL to macro list in comment.
	(AVAILABLE1, AVAILABLE2, AVAILABLE1_USES_J): Remove superfluous undef.
	(CHECK_EOL): Add undef.

2013-02-11   Ondřej Bílka  <neleai@seznam.cz>

	* bits/stdlib-bsearch.h: New file.
	* stdlib/bsearch.c: Include bits/stdlib-bsearch.h.
	* stdlib/stdlib.h: Likewise.

2013-02-11  Roland McGrath  <roland@hack.frob.com>

	* manual/conf.texi (General Limits): Fix SSIZE_MAX type to ssize_t.
	* manual/errno.texi (Error Messages): Fix typo in error_print_progname
	declaration.
	* manual/search.texi (Array Search Function): Add missing const in
	lfind prototype.
	* manual/resource.texi (Limits on Resources): Fix RLIM_INFINITY
	declaration to use rlim_t.
	(Basic Scheduling Functions): Remove erroneous const from
	sched_getparam prototype.  Remove erroneous * from
	sched_get_priority_max and sched_get_priority_min prototypes.