@@ -1,5 +1,8 @@
 2013-02-13  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
+	* sysdeps/ieee754/dbl-64/mpa.c (__mul): Don't bother with zero
+	values in the mantissa.
+
 	* sysdeps/ieee754/dbl-64/mpa.c (add_magnitudes): Use ZK to
 	minimize writes to Z.
 	(sub_magnitudes): Simplify code a bit.
